align 2 images and correct readme errors

--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,14 @@ form label {
     margin: 0;
   }
 
+  .img-shop {
+    vertical-align: middle;
+  }
+
+  .img2 {
+    margin-left: 2px;
+  }
+
   .artics h2 {
     font-size: 20px;
   }
